--- a/static/css/forms.less
+++ b/static/css/forms.less
@@ -514,13 +514,13 @@
 
 .form-actions__right {
     text-align: right;
-}    
+}
 
 .form-actions__right-on-med {
     .respond-to-min(600px, {
         text-align: right;
     });
-}    
+}
 
 .form-actions_item + .form-actions_item {
     // Eyeballed to 30px considering ~4px of space between inline-block items.
@@ -593,7 +593,9 @@
         .respond-to-min(1060px, {
             .u-clearfix();
             & .form-l_col {
+                display: block;
                 float: left;
+                margin-right: 0;
             }
         });
     }
