--- a/static/css/event.less
+++ b/static/css/event.less
@@ -154,8 +154,9 @@
     }
 
     .event-calendar_download {
+        .webfont-demi();
+        
         display: block;
-        font-weight: bold;
         padding-top: .2em;
         text-decoration: none;
         text-transform: none;
