--- a/static/css/event.less
+++ b/static/css/event.less
@@ -29,10 +29,10 @@
 }
 
 
-/* Event-Summary
+/* Event-Media-Body
    ========================================================================== */
 
-.summary__event{
+.media_body__event{
 
     .calendar-icon {
         .cf-calendar-icon( attr(data-month), attr(data-day), @gray-50, @white, 1);
@@ -74,6 +74,10 @@
 
     .summary-meta_container {
         overflow: auto;
+    }
+
+    .tags_list {
+        margin: 0;
     }
 }
 
