--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -11,7 +11,7 @@
     - name: Default example
       markup: |
         <div class="tags">
-            <h4 class="tags_header">Topics:</h4>
+            <h4 class="tags_heading">Topics:</h4>
             <ul class="tags_list">
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
@@ -69,10 +69,10 @@
                 </li>
             </ul>
         </div>
-    - name: Hide header modifier
+    - name: Hide heading modifier
       markup: |
-        <div class="tags tags__hide-header">
-            <h4 class="tags_header u-visually-hidden">Topics:</h4>
+        <div class="tags tags__hide-heading">
+            <h4 class="tags_heading u-visually-hidden">Topics:</h4>
             <ul class="tags_list">
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
@@ -130,10 +130,10 @@
                 </li>
             </ul>
         </div>
-    - name: Block list modifier 
-      markup: | 
+    - name: Block list modifier
+      markup: |
         <div class="tags tags__block-list">
-            <h4 class="tags_header">Topics:</h4>
+            <h4 class="tags_heading">Topics:</h4>
             <ul class="tags_list">
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
@@ -190,7 +190,7 @@
                     </a>
                 </li>
             </ul>
-        </div>  
+        </div>
   tags:
     - cfgov-meta
 */
@@ -200,11 +200,11 @@
 
     .respond-to-min(@bp, {
         position: relative;
-        // 58px here comes from the .tags_header width.
+        // 58px here comes from the .tags_heading width.
         padding-left: unit((58px + 8px) / @base-font-size-px, em);
     });
 
-    &_header {
+    &_heading {
         .h4();
         // Bottom margin is eyeballed to 20px from the baseline.
         margin: 0 0 unit(16px / @font-size, em);
@@ -264,7 +264,7 @@
             padding: 0;
         });
     }
-    
+
     &_bullet {
         position: absolute;
         left: -1em;
@@ -286,7 +286,7 @@
             display: list-item;
         }
 
-        .tags_header {
+        .tags_heading {
             .h4();
             // Bottom margin is eyeballed to 20px from the baseline.
             margin: 0 0 unit(16px / @font-size, em);
@@ -295,16 +295,16 @@
         }
     }
 
-    &__hide-header {
+    &__hide-heading {
         padding-left: 0;
 
-        .tags_header{
+        .tags_heading {
             margin: 0;
         }
     }
-    
-    &__hide-header&__block-list {
-        .tags_header {
+
+    &__hide-heading&__block-list {
+        .tags_heading {
             margin: 0;
         }
     }
