--- a/_includes/macros.html
+++ b/_includes/macros.html
@@ -66,7 +66,7 @@
    title:                      The title of the thing to share. Used by the
                                'share via email'.
 
-   hide_heading (optional):    Toggles the heading. Defaults to true.
+   hide_heading (optional):    Toggles the heading. Defaults to false.
 
    twitter_options (optional): See `options` under the `share_twitter_url()`
                                macro.
@@ -75,12 +75,12 @@
 
    Example:
 
-       {{ share('Title for email sharing', true,
+       {{ share('Title for email sharing', false,
                 { 'text': 'I can write my custom tweet text here' }) }}
 
    ========================================================================== #}
 
-{% macro share(title, hide_heading=true, twitter_options={}) %}
+{% macro share(title, hide_heading=false, twitter_options={}) %}
     <aside>
         <h1 class="h5 {{'u-visually-hidden' if hide_heading}}">Share this page</h1>
         <ul class="post_share list__horizontal">
