Added todos for dummy link hrefs

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,8 @@
             <li class="list_item list-expanding_list-item">
                 <a class="list_link list_link__disabled">For Industry</a>
             </li>
-            <li class="list_item list-expanding_list-item">    
+            <li class="list_item list-expanding_list-item">
+                <!-- TODO: Make this a <button>, it is not a real link -->
                 <a class="list_link list-expanding_trigger" href="#">About</a>
                 <div class="desktop-menu_full-wrapper">
                     <div class="desktop-menu_full-wrapper_decoration">
