--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -8794,7 +8794,7 @@ a.focus .summary_event-date {
 }
 
 .budget_page-content h4 {
-  margin-top: 30px;
+  margin-top: 2.8125em;
 }
 
 .budget_page-content ul {
@@ -8947,9 +8947,9 @@ a.focus .summary_event-date {
   font-weight: normal;
   line-height: 1;
   -webkit-font-smoothing: antialiased;
-  content: "\e402";
+  content: "\e406";
   margin-right: .5em;
-  color: #101820;
+  color: #0072ce;
 }
 
 .budget_page-content.funding-request h4 {
