--- a/_includes/sidenav.html
+++ b/_includes/sidenav.html
@@ -1,7 +1,26 @@
+{# ==========================================================================
 
-{% macro render(items, active_item_id) %}
+   render()
 
-<nav class="nav-secondary expandable">
+   ==========================================================================
+
+   Description:
+
+   Create nav markup when given:
+
+   items:               An array of tuples used to display nav items. 
+                        format: (href, id, caption)
+
+   active_item_id:      A string indicating the id of the nav item 
+                        to be activated.
+
+   additional_classes:  Extra classes you wish to add to the nav, space separated.
+
+   ========================================================================== #}
+
+{% macro render(items, active_item_id, additional_classes) %}
+
+<nav class="nav-secondary expandable {{ additional_classes }}">
     <h1 class="u-visually-hidden">
 {%- for href, id, caption in items %}
     {% if id == 'index' %}
